# makeproject

./: .gitignore  MakeProject.spec  Makefile  README.md  config.yaml  main.py  makeproject.py  parser.py  pyproject.toml  requirements.txt  yamltree.py
assets/: icon.icns
makeproject/: __init__.py  app.py  console.py  constants.py  highlighter.py  library.py  makeproject.py  parser.py  setup_makeproject.py  styles.py  styles_base.qss  styles_dark.qss  styles_light.qss  template_engine.py  tokens.py  updater.py  widgets.py  yamltree.py
makeproject/ui/: __init__.py  delete_confirmation_dialog.py  dialog_utils.py  editors.py  empty_title_dialog.py  file_conflict_dialog.py  name_conflict_dialog.py  panels.py  (+6 more)
project_structs/: GitRepo.yaml  Github Repo.yaml  Master.yaml  Project.yaml  Python Package.yaml  Scripts.yaml  Treatise.yaml  exercises.yaml
templates/: abstract.tex  exercises-README.md  exercises-introduction.tex  frontmatter.tex  gitrepo-README.md  gitrepos.tex  init.py  intro.tex  introduction.tex  nomenclature.tex  pyproject.toml  setup.py
templates/READMES/: documents.md  figures.md  manuscript.md  notebooks.md  presentations.md  project.md  reports.md  scripts.md  scripts_archive.md  scripts_tools.md
templates/exercises/: README.md  introduction.tex
templates/gitrepo/: README.md
templates/papers/: README.md
templates/research_notebook/: note.md  notebook.md
templates/scripts/: config.py
templates/teaching/: 1_1.tex  preamble.sty  quiz.tex  weekly_worksheet.tex
templates/treatise/: README.md  introduction.tex
yaml_structures/: exercises.yaml
(+4 files in other folders)
