[tool.poetry]
name = "{mp:formatted_name}"
version = "0.0.0"
description = ""

authors = ["Jonathan Delgado <jonathandelgado0327@gmail.com>"]
homepage = "https://jdelgado.net/"
repository = "https://github.com/otanan/{mp:formatted_name}"

readme = "README.md"
license = "GNU GENERAL PUBLIC LICENSE"
include = ["LICENSE"]

# keywords = [""]
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.7",
]

[tool.poetry.dependencies]
python = ">=3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"